--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegistroPontoActivity"></activity>
+        <activity android:name=".ConsultaPontoActivity"></activity>
+        <activity android:name=".RegistroPontoActivity" />
         <activity android:name=".CadastroCargoActivity" />
         <activity android:name=".InicioActivity" />
         <activity android:name=".CadastroActivity" />
