--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ConsultaPontoActivity"></activity>
+        <activity android:name=".PerfilActivity"></activity>
+        <activity android:name=".ConsultaPontoActivity" />
         <activity android:name=".RegistroPontoActivity" />
         <activity android:name=".CadastroCargoActivity" />
         <activity android:name=".InicioActivity" />
